--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en”>
+<html>
   <head>
+    <link href="icecream.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>Home</title>
   </head>
   <body>
+    <body style="background-color:#94949e;">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="aboutme.html">About Me</a>
     <h1>This is Sai's Home Page!</h1>
-    <img src="images/home.jpg" height="250">
+    <img src="images/home.jpg" height="250" width="513">
   </body>
 </html>
