--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <body style="background-color:#94949e;">
+    <center>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Sai's Home Page!</h1>
     <img src="images/home.jpg" height="250" width="513">
+    </center>
   </body>
 </html>
