--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,11 @@
 	    <title>Portfolio</title>
 	  </head>
 	  <body>
+	<center>      
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
+    </center>
     <body style="background-color:#94949e;">
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
