--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <title>About Me</title>
   </head>
   <body>
-    <body style="background-color:#94949e;">
+    <body style="background-color:#000000;">
     <center>    
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
