--- a/214/ice.html
+++ b/214/ice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>I Scream For Ice Cream!</title>
-    <link href="icecream.css" rel="stylesheet" type="text/css">
+    <link href="tes.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <img src="images/cookies.jpg" height = "200" >  
