--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,12 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <body style="background-color:#94949e;">
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="200">
+    <h1>This is my Portfolio Page</h1>
+    <img src="images/portfolio.jpg" height="150">
     </center>
+    <p>1.1.7 Activity with scratch</p>
+    <p><a href="https://scratch.mit.edu/projects/117107619/">DJ Pad</a></p>
+    <a href="https://scratch.mit.edu/projects/117107619/">
+    <img src="images/scratch.jpg" height="150">
 	  </body>
 	</html>
