--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
     <img src="images/portfolio.jpg" height="150">
     </center>
     <p>1.1.7 Activity with scratch</p>
-    <p><a href="https://scratch.mit.edu/projects/117107619/">DJ Pad</a></p>
-    <a href="https://scratch.mit.edu/projects/117107619/">
+    <p><a href="https://scratch.mit.edu/projects/117107619/" target="_blank">DJ Pad</a></p>
+    <a href="https://scratch.mit.edu/projects/117107619/" target="_blank">
     <img src="images/scratch.jpg" height="150">
 	  </body>
 	</html>
