--- a/aboutme.html
+++ b/aboutme.html
@@ -6,17 +6,17 @@
     <title>About Me</title>
   </head>
   <body>
-    <body style="background-color:#000000;">
+    <body style="background-color:#94949e;">
     <center>    
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    </center>
     <h1>All About Me</h1>
         <table width="500">
             <tr><td>I have been a high school math teacher for 5 years and will start teaching computer science in the 2017-2018 school year. </td>
             <td><img src="images/jake.jpg" height="250" width="250"></td>
             </tr>
         </table>
+    </center>
   </body>
 </html>
