added link to app inventor

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -14,9 +14,15 @@
     <h1>This is my Portfolio Page</h1>
     <img src="images/portfolio.jpg" height="150">
     </center>
-    <p>1.1.7 Activity with scratch</p>
-    <p><a href="https://scratch.mit.edu/projects/117107619/" target="_blank">DJ Pad</a></p>
-    <a href="https://scratch.mit.edu/projects/117107619/" target="_blank">
-    <img src="images/scratch.jpg" height="150">
+    <h3>1.1.7 Activity with scratch</h3>
+        <p><a href="https://scratch.mit.edu/projects/117107619/" target="_blank">DJ Pad</a></p>
+        <p><a href="https://scratch.mit.edu/projects/117107619/" target="_blank">
+        <img src="images/scratch.jpg" height="150"></a></p>
+    
+    <br>
+    <h3>1.1.7 App inventor</h3>
+    <p></p><a href="download/MiniGolf_MIT_ver1.apk" download> MiniGolf apk file</a>
+    </p>
+    
 	  </body>
 	</html>
