added link to app inventor and img

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -21,7 +21,9 @@
     
     <br>
     <h3>1.1.7 App inventor</h3>
-    <p></p><a href="download/MiniGolf_MIT_ver1.apk" download> MiniGolf apk file</a>
+    <p> <img src="images/minigolf.png" height="300"> <br>
+        <a href="download/MiniGolf_MIT_ver1.apk" download> MiniGolf apk file</a> <br>
+        <a href="download/MiniGolf_MIT_ver1.aia" download> MiniGolf aia file</a>
     </p>
     
 	  </body>
