--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -25,6 +25,12 @@
         <a href="download/MiniGolf_MIT_ver1.apk" download> MiniGolf apk file</a> <br>
         <a href="download/MiniGolf_MIT_ver1.aia" download> MiniGolf aia file</a>
     </p>
+    <br>
+    <h3>Interactive Fiction</h3>
+    <p> <a href="https://repl.it/ChE4/62" target="_blank"> The Injustice League fiction</a></p>
     
+    <br>
+    <h3>Python Code</h3>
+    <p> <a href="download/craps.py" download> Craps simulator</a></p>
 	  </body>
 	</html>
