--- a/test/index.html
+++ b/test/index.html
@@ -1,34 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-<link href="tes.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-
-<div class="container">
-
-<header>
-   <h1>City Gallery</h1>
-</header>
-  
-<nav>
-  <ul>
-    <li><a href="#">London</a></li>
-    <li><a href="#">Paris</a></li>
-    <li><a href="#">Tokyo</a></li>
-  </ul>
-</nav>
-
-<article>
-  <h1>London</h1>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-</article>
-
-<footer>Copyright © W3Schools.com</footer>
-
-</div>
-
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link href="lay.css" rel="stylesheet" type="text/css">
+    <title>Home</title>
+  </head>
+  <body>
+    <div class = "container">
+      <header>
+          <h1>Sasai Nakmee</h1>
+      </header>
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+          </ul>
+      </nav>
+      <article>
+          <h1>About Me</h1>
+          <p><img src="images/jake.jpg" height="200"></p>
+          <table>
+            <tr><th>Name:</th><td>Sasai Nakmee</td></tr>
+            <tr><th>School:</th><td><a href="http://www.lawndalehs.org">Lawndale High School</a></td></tr>
+            <tr><th>Subjects:</th><td>Algebra II, Statistics</td></tr>
+            <tr><th>Email:</th><td><a href="mailto:nakmees@cvuhsd.k12.ca.us">nakmees@cvuhsd.k12.ca.us</a></td></tr>
+            <tr><th>Favorite Food:</th><td>Pad See Ew (Thai Dish)</td></tr>
+            <tr><th>Introduction:</th><td>I have been a high school math teacher for 5 years and will start 
+            teaching computer science in the 2017-2018 school year. </td></tr>
+          </table>
+          <br><br><br>
+      </article>
+      <footer>Copyright © tnguyen19.github.io</footer>
+    </div>
+  </body>
 </html>
