python PIL added to portfolio

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -32,5 +32,13 @@
     <br>
     <h3>Python Code</h3>
     <p> <a href="download/craps.py" download> Craps simulator</a></p>
+    
+    <br>
+    <h3>Python Code 1.4.7</h3>
+    <p> <a href="download/numpytopil.zip" download> Source file and jpg</a> <br>
+        <a href="download/49ers.jpg" download><img src="images/49ers.jpg" height="300"></a>
+        <a href="download/newlogo.png" download><img src="images/newlogo.png" height="300"></a>
+    </p>
+    
 	  </body>
 	</html>
