--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -42,5 +42,13 @@
     <br>
     <h3>3.1.1 Time Series and Trends</h3>
     <p> <a href="download/Olympicdata.zip" download> Source file and csv files</a></p>
+    
+    <br>
+    <h3>Net Logo 4.2.3</h3>
+    <p> <a href="download/TetrisExtra4.nlogo" download> Source file</a> <br>
+        <img src="images/tetris.png" height="300"> <br>
+    </p>
+    <br>
+    
 	  </body>
 	</html>
