--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,7 @@
           </table>
           <br><br><br>
       </article>
-      <footer>Copyright © tnguyen19.github.io</footer>
+      <footer>Copyright © nakmees.github.io</footer>
     </div>
   </body>
 </html>
