--- a/my_website/index.html
+++ b/my_website/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
   </head>
   <body>
-    <body style="background-color:#8c8cd9;">
+    <body background="images/batman.jpg">
     <center>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
