--- a/test/index.html
+++ b/test/index.html
@@ -22,8 +22,8 @@
           <table>
             <tr><th>Name:</th><td>Sasai Nakmee</td></tr>
             <tr><th>School:</th><td><a href="http://www.lawndalehs.org">Lawndale High School</a></td></tr>
-            <tr><th>Subjects:</th><td>Algebra II, Statistics</td></tr>
-            <tr><th>Email:</th><td><a href="mailto:nakmees@cvuhsd.k12.ca.us">nakmees@cvuhsd.k12.ca.us</a></td></tr>
+            <tr><th>Subjects:</th><td>Integrated Math I, Statistics, CS Principles</td></tr>
+            <tr><th>Email:</th><td><a href="mailto:nakmees@centinela.k12.ca.us">nakmees@centinela.k12.ca.us</a></td></tr>
             <tr><th>Favorite Food:</th><td>Pad See Ew (Thai Dish)</td></tr>
             <tr><th>Introduction:</th><td>I have been a high school math teacher for 5 years and will start 
             teaching computer science in the 2017-2018 school year. </td></tr>
