--- a/214/ice.html
+++ b/214/ice.html
@@ -1,17 +1,18 @@
+
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="icecream.css" rel="stylesheet" type="text/css"> 
     <meta charset="utf-8">
     <title>I Scream For Ice Cream!</title>
-    <link href="tes.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <img src="images/cookies.jpg" height = "200" >  
     <h1>Most Popular Ice Cream Flavors</h1>
+    <img src="cookies.jpg" alt="Picture of Cookies" />
     <table>
-      <tr><th>Rank</th><th>Flavor</th></tr>
-      <tr><td>1</td><td>Vanilla</td></tr>
-      <tr><td>2</td><td>Strawberry</td></tr>
+      <tr><th>Rank</th><th>Flavor</th><th>Toppings</th></tr>
+      <tr><td>1</td><td>Vanilla</td><td>Peanuts</td></tr>
+      <tr><td>2</td><td>Strawberry</td><td>Cookie dough</td></tr>
       <tr><td>3</td><td>Chocolate</td></tr>
       <tr><td>4</td><td>Cookies and Cream</td></tr>
       <tr><td>5</td><td>Mint Chocolate Chip</td></tr>
