--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
           <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="https://www.lawndalehs.org">Lawndale</a></li>
           </ul>
       </nav>
       <article>
